--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,11 @@
-#footer {
-    padding: 16px;
-    border: 1px solid #ccc;
-    bottom: 0;
+.wrapper {
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
-.m-t-16 {
-    margin-top: 16px;
-}
-
-.m-b-16 {
-    margin-bottom: 16px;
+.main-content {
+    display: flex;
+    margin-top: 10px;
 }
